重构历史记录功能